project/tiger.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from src/tiger.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_calc -> Exp                                 (0)
	Exp -> let Decs in Seq end                         (1)
	Exp -> Exp1                                        (2)
	Decs -> Dec Decs                                   (3)
	Decs -> Dec                                        (4)
	Dec -> TyDec                                       (5)
	Dec -> VarDec                                      (6)
	Dec -> FunDec                                      (7)
	TyDec -> type id '=' Ty                            (8)
	TyId -> id                                         (9)
	Ty -> id                                           (10)
	Ty -> array of id                                  (11)
	Ty -> '{' TyFs '}'                                 (12)
	TyFs -> id ':' id ',' TyFs                         (13)
	TyFs -> id ':' id                                  (14)
	TyFs ->                                            (15)
	VarDec -> var id ':=' Exp                          (16)
	VarDec -> var id ':' TyId ':=' Exp                 (17)
	OptTyAnn -> ':' TyId                               (18)
	OptTyAnn ->                                        (19)
	FunDec -> function id '(' TyFs ')' OptTyAnn '=' Exp   (20)
	Seq -> Exp                                         (21)
	Seq -> Exp ';' Seq                                 (22)
	LVal -> id                                         (23)
	LVal -> LVal1                                      (24)
	LVal1 -> id '[' Exp1 ']'                           (25)
	LVal1 -> LVal1 '[' Exp1 ']'                        (26)
	LVal1 -> id '.' id                                 (27)
	LVal1 -> LVal1 '.' id                              (28)
	Exp1 -> Exp1 '+' Exp1                              (29)
	Exp1 -> Exp1 '-' Exp1                              (30)
	Exp1 -> Exp1 '*' Exp1                              (31)
	Exp1 -> Exp1 '/' Exp1                              (32)
	Exp1 -> Exp1 '&' Exp1                              (33)
	Exp1 -> Exp1 '|' Exp1                              (34)
	Exp1 -> Exp1 '=' Exp1                              (35)
	Exp1 -> Exp1 '<>' Exp1                             (36)
	Exp1 -> Exp1 '>' Exp1                              (37)
	Exp1 -> Exp1 '<' Exp1                              (38)
	Exp1 -> Exp1 '>=' Exp1                             (39)
	Exp1 -> Exp1 '<=' Exp1                             (40)
	Exp1 -> LVal ':=' Exp1                             (41)
	Exp1 -> Atom                                       (42)
	Exp1 -> id '(' Vals ')'                            (43)
	Exp1 -> '(' Seq ')'                                (44)
	Exp1 -> '(' ')'                                    (45)
	Exp1 -> while Exp1 do Exp                          (46)
	Exp1 -> for id ':=' Exp1 to Exp1 do Exp            (47)
	Exp1 -> if Exp1 then Exp                           (48)
	Exp1 -> if Exp1 then Exp else Exp                  (49)
	Exp1 -> break                                      (50)
	Vals -> Exp1                                       (51)
	Vals -> Exp1 ',' Vals                              (52)
	Vals ->                                            (53)
	Atom -> num                                        (54)
	Atom -> str                                        (55)
	Atom -> nil                                        (56)
	Atom -> id '{' RecFs '}'                           (57)
	Atom -> id '[' Exp1 ']' Arr1                       (58)
	Atom -> LVal                                       (59)
	Atom -> '-' Exp1                                   (60)
	Arr1 -> of Exp1                                    (61)
	RecFs -> id '=' Exp1                               (62)
	RecFs -> id '=' Exp1 ',' RecFs                     (63)
	RecFs ->                                           (64)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	if             { (_, $$@If) }
	'-'            { (_, $$@Negation) }
	'('            { (_, $$@LParen) }
	')'            { (_, $$@RParen) }
	'{'            { (_, $$@LBrace) }
	'}'            { (_, $$@RBrace) }
	'['            { (_, $$@LBracket) }
	']'            { (_, $$@RBracket) }
	','            { (_, $$@Comma) }
	':'            { (_, $$@Colon) }
	';'            { (_, $$@Semicolon) }
	type           { (_, $$@Type) }
	then           { (_, $$@Then) }
	else           { (_, $$@Else) }
	var            { (_, $$@Var) }
	function       { (_, $$@Function) }
	let            { (_, $$@Let) }
	in             { (_, $$@In) }
	end            { (_, $$@End) }
	':='           { (_, $$@Bind) }
	array          { (_, $$@Array) }
	of             { (_, $$@Of) }
	while          { (_, $$@While) }
	for            { (_, $$@For) }
	to             { (_, $$@To) }
	break          { (_, $$@Break) }
	do             { (_, $$@Do) }
	nil            { (_, $$@Nil) }
	'+'            { (_, $$@Plus) }
	'*'            { (_, $$@Times) }
	'/'            { (_, $$@Div) }
	'='            { (_, $$@Eq) }
	'<>'           { (_, $$@NotEq) }
	'<'            { (_, $$@LT) }
	'<='           { (_, $$@LTE) }
	'>'            { (_, $$@GT) }
	'>='           { (_, $$@GTE) }
	'&'            { (_, $$@And) }
	'|'            { (_, $$@Or) }
	'.'            { (_, $$@Dot) }
	id             { (_, Id $$) }
	num            { (_, Num $$) }
	str            { (_, StringL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_calc     rule  0
	Exp             rules 1, 2
	Decs            rules 3, 4
	Dec             rules 5, 6, 7
	TyDec           rule  8
	TyId            rule  9
	Ty              rules 10, 11, 12
	TyFs            rules 13, 14, 15
	VarDec          rules 16, 17
	OptTyAnn        rules 18, 19
	FunDec          rule  20
	Seq             rules 21, 22
	LVal            rules 23, 24
	LVal1           rules 25, 26, 27, 28
	Exp1            rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50
	Vals            rules 51, 52, 53
	Atom            rules 54, 55, 56, 57, 58, 59, 60
	Arr1            rule  61
	RecFs           rules 62, 63, 64

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_calc -> . Exp                                (rule 0)

	if             shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	let            shift, and enter state 2
	while          shift, and enter state 11
	for            shift, and enter state 12
	break          shift, and enter state 13
	nil            shift, and enter state 14
	id             shift, and enter state 15
	num            shift, and enter state 16
	str            shift, and enter state 17

	Exp            goto state 3
	LVal           goto state 4
	LVal1          goto state 5
	Exp1           goto state 6
	Atom           goto state 7

State 1

	Exp -> . let Decs in Seq end                        (rule 1)

	let            shift, and enter state 2


State 2

	Exp -> let . Decs in Seq end                        (rule 1)

	type           shift, and enter state 49
	var            shift, and enter state 50
	function       shift, and enter state 51

	Decs           goto state 44
	Dec            goto state 45
	TyDec          goto state 46
	VarDec         goto state 47
	FunDec         goto state 48

State 3

	%start_calc -> Exp .                                (rule 0)

	%eof           accept


State 4

	Exp1 -> LVal . ':=' Exp1                            (rule 41)
	Atom -> LVal .                                      (rule 59)

	'-'            reduce using rule 59
	')'            reduce using rule 59
	'}'            reduce using rule 59
	']'            reduce using rule 59
	','            reduce using rule 59
	';'            reduce using rule 59
	type           reduce using rule 59
	then           reduce using rule 59
	else           reduce using rule 59
	var            reduce using rule 59
	function       reduce using rule 59
	in             reduce using rule 59
	end            reduce using rule 59
	':='           shift, and enter state 43
	to             reduce using rule 59
	do             reduce using rule 59
	'+'            reduce using rule 59
	'*'            reduce using rule 59
	'/'            reduce using rule 59
	'='            reduce using rule 59
	'<>'           reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'&'            reduce using rule 59
	'|'            reduce using rule 59
	%eof           reduce using rule 59


State 5

	LVal -> LVal1 .                                     (rule 24)
	LVal1 -> LVal1 . '[' Exp1 ']'                       (rule 26)
	LVal1 -> LVal1 . '.' id                             (rule 28)

	'-'            reduce using rule 24
	')'            reduce using rule 24
	'}'            reduce using rule 24
	'['            shift, and enter state 41
	']'            reduce using rule 24
	','            reduce using rule 24
	';'            reduce using rule 24
	type           reduce using rule 24
	then           reduce using rule 24
	else           reduce using rule 24
	var            reduce using rule 24
	function       reduce using rule 24
	in             reduce using rule 24
	end            reduce using rule 24
	':='           reduce using rule 24
	to             reduce using rule 24
	do             reduce using rule 24
	'+'            reduce using rule 24
	'*'            reduce using rule 24
	'/'            reduce using rule 24
	'='            reduce using rule 24
	'<>'           reduce using rule 24
	'<'            reduce using rule 24
	'<='           reduce using rule 24
	'>'            reduce using rule 24
	'>='           reduce using rule 24
	'&'            reduce using rule 24
	'|'            reduce using rule 24
	'.'            shift, and enter state 42
	%eof           reduce using rule 24


State 6

	Exp -> Exp1 .                                       (rule 2)
	Exp1 -> Exp1 . '+' Exp1                             (rule 29)
	Exp1 -> Exp1 . '-' Exp1                             (rule 30)
	Exp1 -> Exp1 . '*' Exp1                             (rule 31)
	Exp1 -> Exp1 . '/' Exp1                             (rule 32)
	Exp1 -> Exp1 . '&' Exp1                             (rule 33)
	Exp1 -> Exp1 . '|' Exp1                             (rule 34)
	Exp1 -> Exp1 . '=' Exp1                             (rule 35)
	Exp1 -> Exp1 . '<>' Exp1                            (rule 36)
	Exp1 -> Exp1 . '>' Exp1                             (rule 37)
	Exp1 -> Exp1 . '<' Exp1                             (rule 38)
	Exp1 -> Exp1 . '>=' Exp1                            (rule 39)
	Exp1 -> Exp1 . '<=' Exp1                            (rule 40)

	'-'            shift, and enter state 29
	')'            reduce using rule 2
	'}'            reduce using rule 2
	']'            reduce using rule 2
	','            reduce using rule 2
	';'            reduce using rule 2
	type           reduce using rule 2
	then           reduce using rule 2
	else           reduce using rule 2
	var            reduce using rule 2
	function       reduce using rule 2
	in             reduce using rule 2
	end            reduce using rule 2
	to             reduce using rule 2
	do             reduce using rule 2
	'+'            shift, and enter state 30
	'*'            shift, and enter state 31
	'/'            shift, and enter state 32
	'='            shift, and enter state 33
	'<>'           shift, and enter state 34
	'<'            shift, and enter state 35
	'<='           shift, and enter state 36
	'>'            shift, and enter state 37
	'>='           shift, and enter state 38
	'&'            shift, and enter state 39
	'|'            shift, and enter state 40
	%eof           reduce using rule 2


State 7

	Exp1 -> Atom .                                      (rule 42)

	'-'            reduce using rule 42
	')'            reduce using rule 42
	'}'            reduce using rule 42
	']'            reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42
	type           reduce using rule 42
	then           reduce using rule 42
	else           reduce using rule 42
	var            reduce using rule 42
	function       reduce using rule 42
	in             reduce using rule 42
	end            reduce using rule 42
	to             reduce using rule 42
	do             reduce using rule 42
	'+'            reduce using rule 42
	'*'            reduce using rule 42
	'/'            reduce using rule 42
	'='            reduce using rule 42
	'<>'           reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'&'            reduce using rule 42
	'|'            reduce using rule 42
	%eof           reduce using rule 42


State 8

	Exp1 -> if . Exp1 then Exp                          (rule 48)
	Exp1 -> if . Exp1 then Exp else Exp                 (rule 49)

	if             shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	while          shift, and enter state 11
	for            shift, and enter state 12
	break          shift, and enter state 13
	nil            shift, and enter state 14
	id             shift, and enter state 15
	num            shift, and enter state 16
	str            shift, and enter state 17

	LVal           goto state 4
	LVal1          goto state 5
	Exp1           goto state 28
	Atom           goto state 7

State 9

	Atom -> '-' . Exp1                                  (rule 60)

	if             shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	while          shift, and enter state 11
	for            shift, and enter state 12
	break          shift, and enter state 13
	nil            shift, and enter state 14
	id             shift, and enter state 15
	num            shift, and enter state 16
	str            shift, and enter state 17

	LVal           goto state 4
	LVal1          goto state 5
	Exp1           goto state 27
	Atom           goto state 7

State 10

	Exp1 -> '(' . Seq ')'                               (rule 44)
	Exp1 -> '(' . ')'                                   (rule 45)

	if             shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	')'            shift, and enter state 26
	let            shift, and enter state 2
	while          shift, and enter state 11
	for            shift, and enter state 12
	break          shift, and enter state 13
	nil            shift, and enter state 14
	id             shift, and enter state 15
	num            shift, and enter state 16
	str            shift, and enter state 17

	Exp            goto state 24
	Seq            goto state 25
	LVal           goto state 4
	LVal1          goto state 5
	Exp1           goto state 6
	Atom           goto state 7

State 11

	Exp1 -> while . Exp1 do Exp                         (rule 46)

	if             shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	while          shift, and enter state 11
	for            shift, and enter state 12
	break          shift, and enter state 13
	nil            shift, and enter state 14
	id             shift, and enter state 15
	num            shift, and enter state 16
	str            shift, and enter state 17

	LVal           goto state 4
	LVal1          goto state 5
	Exp1           goto state 23
	Atom           goto state 7

State 12

	Exp1 -> for . id ':=' Exp1 to Exp1 do Exp           (rule 47)

	id             shift, and enter state 22


State 13

	Exp1 -> break .                                     (rule 50)

	'-'            reduce using rule 50
	')'            reduce using rule 50
	'}'            reduce using rule 50
	']'            reduce using rule 50
	','            reduce using rule 50
	';'            reduce using rule 50
	type           reduce using rule 50
	then           reduce using rule 50
	else           reduce using rule 50
	var            reduce using rule 50
	function       reduce using rule 50
	in             reduce using rule 50
	end            reduce using rule 50
	to             reduce using rule 50
	do             reduce using rule 50
	'+'            reduce using rule 50
	'*'            reduce using rule 50
	'/'            reduce using rule 50
	'='            reduce using rule 50
	'<>'           reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'&'            reduce using rule 50
	'|'            reduce using rule 50
	%eof           reduce using rule 50


State 14

	Atom -> nil .                                       (rule 56)

	'-'            reduce using rule 56
	')'            reduce using rule 56
	'}'            reduce using rule 56
	']'            reduce using rule 56
	','            reduce using rule 56
	';'            reduce using rule 56
	type           reduce using rule 56
	then           reduce using rule 56
	else           reduce using rule 56
	var            reduce using rule 56
	function       reduce using rule 56
	in             reduce using rule 56
	end            reduce using rule 56
	to             reduce using rule 56
	do             reduce using rule 56
	'+'            reduce using rule 56
	'*'            reduce using rule 56
	'/'            reduce using rule 56
	'='            reduce using rule 56
	'<>'           reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'&'            reduce using rule 56
	'|'            reduce using rule 56
	%eof           reduce using rule 56


State 15

	LVal -> id .                                        (rule 23)
	LVal1 -> id . '[' Exp1 ']'                          (rule 25)
	LVal1 -> id . '.' id                                (rule 27)
	Exp1 -> id . '(' Vals ')'                           (rule 43)
	Atom -> id . '{' RecFs '}'                          (rule 57)
	Atom -> id . '[' Exp1 ']' Arr1                      (rule 58)

	'-'            reduce using rule 23
	'('            shift, and enter state 18
	')'            reduce using rule 23
	'{'            shift, and enter state 19
	'}'            reduce using rule 23
	'['            shift, and enter state 20
	']'            reduce using rule 23
	','            reduce using rule 23
	';'            reduce using rule 23
	type           reduce using rule 23
	then           reduce using rule 23
	else           reduce using rule 23
	var            reduce using rule 23
	function       reduce using rule 23
	in             reduce using rule 23
	end            reduce using rule 23
	':='           reduce using rule 23
	to             reduce using rule 23
	do             reduce using rule 23
	'+'            reduce using rule 23
	'*'            reduce using rule 23
	'/'            reduce using rule 23
	'='            reduce using rule 23
	'<>'           reduce using rule 23
	'<'            reduce using rule 23
	'<='           reduce using rule 23
	'>'            reduce using rule 23
	'>='           reduce using rule 23
	'&'            reduce using rule 23
	'|'            reduce using rule 23
	'.'            shift, and enter state 21
	%eof           reduce using rule 23


State 16

	Atom -> num .                                       (rule 54)

	'-'            reduce using rule 54
	')'            reduce using rule 54
	'}'            reduce using rule 54
	']'            reduce using rule 54
	','            reduce using rule 54
	';'            reduce using rule 54
	type           reduce using rule 54
	then           reduce using rule 54
	else           reduce using rule 54
	var            reduce using rule 54
	function       reduce using rule 54
	in             reduce using rule 54
	end            reduce using rule 54
	to             reduce using rule 54
	do             reduce using rule 54
	'+'            reduce using rule 54
	'*'            reduce using rule 54
	'/'            reduce using rule 54
	'='            reduce using rule 54
	'<>'           reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'&'            reduce using rule 54
	'|'            reduce using rule 54
	%eof           reduce using rule 54


State 17

	Atom -> str .                                       (rule 55)

	'-'            reduce using rule 55
	')'            reduce using rule 55
	'}'            reduce using rule 55
	']'            reduce using rule 55
	','            reduce using rule 55
	';'            reduce using rule 55
	type           reduce using rule 55
	then           reduce using rule 55
	else           reduce using rule 55
	var            reduce using rule 55
	function       reduce using rule 55
	in             reduce using rule 55
	end            reduce using rule 55
	to             reduce using rule 55
	do             reduce using rule 55
	'+'            reduce using rule 55
	'*'            reduce using rule 55
	'/'            reduce using rule 55
	'='            reduce using rule 55
	'<>'           reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'&'            reduce using rule 55
	'|'            reduce using rule 55
	%eof           reduce using rule 55


State 18

	Exp1 -> id '(' . Vals ')'                           (rule 43)

	if             shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	')'            reduce using rule 53
	while          shift, and enter state 11
	for            shift, and enter state 12
	break          shift, and enter state 13
	nil            shift, and enter state 14
	id             shift, and enter state 15
	num            shift, and enter state 16
	str            shift, and enter state 17

	LVal           goto state 4
	LVal1          goto state 5
	Exp1           goto state 81
	Vals           goto state 82
	Atom           goto state 7

State 19

	Atom -> id '{' . RecFs '}'                          (rule 57)

	'}'            reduce using rule 64
	id             shift, and enter state 80

	RecFs          goto state 79

State 20

	LVal1 -> id '[' . Exp1 ']'                          (rule 25)
	Atom -> id '[' . Exp1 ']' Arr1                      (rule 58)

	if             shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	while          shift, and enter state 11
	for            shift, and enter state 12
	break          shift, and enter state 13
	nil            shift, and enter state 14
	id             shift, and enter state 15
	num            shift, and enter state 16
	str            shift, and enter state 17

	LVal           goto state 4
	LVal1          goto state 5
	Exp1           goto state 78
	Atom           goto state 7

State 21

	LVal1 -> id '.' . id                                (rule 27)

	id             shift, and enter state 77


State 22

	Exp1 -> for id . ':=' Exp1 to Exp1 do Exp           (rule 47)

	':='           shift, and enter state 76


State 23

	Exp1 -> Exp1 . '+' Exp1                             (rule 29)
	Exp1 -> Exp1 . '-' Exp1                             (rule 30)
	Exp1 -> Exp1 . '*' Exp1                             (rule 31)
	Exp1 -> Exp1 . '/' Exp1                             (rule 32)
	Exp1 -> Exp1 . '&' Exp1                             (rule 33)
	Exp1 -> Exp1 . '|' Exp1                             (rule 34)
	Exp1 -> Exp1 . '=' Exp1                             (rule 35)
	Exp1 -> Exp1 . '<>' Exp1                            (rule 36)
	Exp1 -> Exp1 . '>' Exp1                             (rule 37)
	Exp1 -> Exp1 . '<' Exp1                             (rule 38)
	Exp1 -> Exp1 . '>=' Exp1                            (rule 39)
	Exp1 -> Exp1 . '<=' Exp1                            (rule 40)
	Exp1 -> while Exp1 . do Exp                         (rule 46)

	'-'            shift, and enter state 29
	do             shift, and enter state 75
	'+'            shift, and enter state 30
	'*'            shift, and enter state 31
	'/'            shift, and enter state 32
	'='            shift, and enter state 33
	'<>'           shift, and enter state 34
	'<'            shift, and enter state 35
	'<='           shift, and enter state 36
	'>'            shift, and enter state 37
	'>='           shift, and enter state 38
	'&'            shift, and enter state 39
	'|'            shift, and enter state 40


State 24

	Seq -> Exp .                                        (rule 21)
	Seq -> Exp . ';' Seq                                (rule 22)

	')'            reduce using rule 21
	';'            shift, and enter state 74
	end            reduce using rule 21


State 25

	Exp1 -> '(' Seq . ')'                               (rule 44)

	')'            shift, and enter state 73


State 26

	Exp1 -> '(' ')' .                                   (rule 45)

	'-'            reduce using rule 45
	')'            reduce using rule 45
	'}'            reduce using rule 45
	']'            reduce using rule 45
	','            reduce using rule 45
	';'            reduce using rule 45
	type           reduce using rule 45
	then           reduce using rule 45
	else           reduce using rule 45
	var            reduce using rule 45
	function       reduce using rule 45
	in             reduce using rule 45
	end            reduce using rule 45
	to             reduce using rule 45
	do             reduce using rule 45
	'+'            reduce using rule 45
	'*'            reduce using rule 45
	'/'            reduce using rule 45
	'='            reduce using rule 45
	'<>'           reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'&'            reduce using rule 45
	'|'            reduce using rule 45
	%eof           reduce using rule 45


State 27

	Exp1 -> Exp1 . '+' Exp1                             (rule 29)
	Exp1 -> Exp1 . '-' Exp1                             (rule 30)
	Exp1 -> Exp1 . '*' Exp1                             (rule 31)
	Exp1 -> Exp1 . '/' Exp1                             (rule 32)
	Exp1 -> Exp1 . '&' Exp1                             (rule 33)
	Exp1 -> Exp1 . '|' Exp1                             (rule 34)
	Exp1 -> Exp1 . '=' Exp1                             (rule 35)
	Exp1 -> Exp1 . '<>' Exp1                            (rule 36)
	Exp1 -> Exp1 . '>' Exp1                             (rule 37)
	Exp1 -> Exp1 . '<' Exp1                             (rule 38)
	Exp1 -> Exp1 . '>=' Exp1                            (rule 39)
	Exp1 -> Exp1 . '<=' Exp1                            (rule 40)
	Atom -> '-' Exp1 .                                  (rule 60)

	'-'            reduce using rule 60
	')'            reduce using rule 60
	'}'            reduce using rule 60
	']'            reduce using rule 60
	','            reduce using rule 60
	';'            reduce using rule 60
	type           reduce using rule 60
	then           reduce using rule 60
	else           reduce using rule 60
	var            reduce using rule 60
	function       reduce using rule 60
	in             reduce using rule 60
	end            reduce using rule 60
	to             reduce using rule 60
	do             reduce using rule 60
	'+'            reduce using rule 60
	'*'            reduce using rule 60
	'/'            reduce using rule 60
	'='            reduce using rule 60
	'<>'           reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'&'            reduce using rule 60
	'|'            reduce using rule 60
	%eof           reduce using rule 60


State 28
